--- a/package.json
+++ b/package.json
@@ -14,15 +14,16 @@
   "dependencies": {
     "@ffmpeg/ffmpeg": "^0.12.10",
     "@ffmpeg/util": "^0.12.1",
-    "express": "^4.21.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "ws": "^8.18.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.8",
     "@babel/preset-env": "^7.25.8",
     "@babel/preset-react": "^7.25.7",
     "babel-loader": "^9.2.1",
+    "express": "^4.21.1",
     "rimraf": "^6.0.1",
     "webpack": "^5.95.0",
     "webpack-cli": "^5.1.4",
